# vdvanalyze

./: vdvanalyze.cabal
data/: simple.xml
src/Vdv/: Analyze.hs  Attoparsec.hs  DataMessage.hs  ElementPath.hs  Exclusions.hs  Filter.hs  FilterOperator.hs  Journey.hs  Logfile.hs  Service.hs  Settings.hs  Text.hs  Time.hs  XML.hs
