name:                vdvanalyze
version:             0.1.0.0
synopsis:            Analyse and compare log files from VDV453 sources
-- description:         
homepage:            https://github.com/pmiddend/vdvanalyze.git
license:             GPL-3
license-file:        LICENSE
author:              Philipp Middendorf
maintainer:          pmidden@secure.mailbox.org
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/pmiddend/vdvanalyze.git

executable analyze
  hs-source-dirs:      src
  main-is:             Vdv/Analyze.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7
                     , classy-prelude
                     , filepath
                     , optparse-applicative
                     , lens
                     , time
                     , mtl
                     , text
                     , bytestring
                     , directory
                     , xml-lens
                     , xml-conduit
                     , data-default
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -Wall
  default-extensions: NoImplicitPrelude,OverloadedStrings